services/templates/shopping-cart-service/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shopping-cart-service
  namespace: default
  labels:
    app: shopping-cart-service
spec:
  host: shopping-cart-service
  subsets:
    - name: v1
      labels:
        version: v1
