services/templates/shopping-cart-service/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-cart-service
  namespace: default
  labels:
    app: shopping-cart-service
spec:
  hosts:
    - shopping-cart-service
  http:
    - route:
        - destination:
            host: user-service
            subset: v1
